Version Next

    - Catch XmlMappingExceptions in SpringDelegate

Version 1.0.284 Released Feb 16, 2012

    - Added new DAO support classes
    - Add support for creating automatic backups to PersistentObject
    - Add ability to enable/disable PersistentObject "empty starts"
    - Put back UpdatingDataSource which got accidentally lost in r205
    - Fixed bug in SQLSchemaUpdater detecting initialized database
    - Added SpringContextApplication.destroySpringApplication() hook
    - Deprecated ContextApplicationFactoryBean
    - Added HardLink class

Version 1.0.263 Released Jan 30, 2012

    - Bug fixes and tweaks to PersistentObject classes
    - Added PersistentObject checking for "out-of-band" updates
    - Added <dellroad:rpmdist> macro to macros.xml
    - Relax servlet 3.0 requirement in SpringContextApplication (issue #5)
    - Added IdGenerator, IdMapper, and IdMappingMarshaller
    - Added SpringXSLUpdateTransformConfigurer

Version 1.0.227 Released Jan 18, 2012

    - Added new PersistentObject classes in org.dellroad.stuff.pobj
    - Remove unnecessary methods openConnection() and closeConnection()
      from AbstractSchemaUpdater and subclasses
    - Only require ListableBeanFactory in SpringSQLSchemaUpdater when
      schema updates are not specified explicitly
    - Apply some minimal validation to schema update names
    - Added AnnotatedXMLEvent{Reader, Writer}, TransformErrorListener
    - Added new "jibx-bind" build macro

Version 1.0.207 Released Jan 10, 2012

    - Refactored schema package to make schema tracking not be SQL-specific
    - Added SocketAcceptor, ValidationContext, ExceptionLoggingFilter
    - Added ParseUtil.deserializeBooleanStrictly()
    - Releases are now published in Maven

Version 1.0.189 Released Dec 16, 2011

    - Removed obsolete WebContextApplicationServlet
    - Added @VaadinConfigurable and re-targeted VaadinConfigurableAspect to
      apply to @VaadinConfigurable beans instead of @Configurable beans; this